@@ -28,6 +28,14 @@ fai (3.2.21) unstable; urgency=low
     matrix.systems@matrix.msu.edu for a first patch). (closes: #530656)
   * setup-storage/Volumes.pm: Updated mdadm --scan output parser to work with
     current mdadm versions.
+  * setup-storage/Volumes.pm: Ignore another line of output from parted
+    (GPT-related warning). Thanks Andreas Schuldei for noticing this.
+  * setup-storage, setup-storage/Sizes.pm: Properly handle -h, early check for
+    unset (but necessary) environment variables, print full device names in
+    several error/warning messages instead of the partition id only.
+  * setup-storage/Fstab.pm: Be more verbose if obtaining the UUID fails (may
+    be caused by earlier use in RAID array, tell the user how to solve the
+    problem). Ignore exit code 3 of vol_id -l.
   
  -- Thomas Lange <lange@debian.org>  Sun, 19 Jul 2009 12:08:02 +0200
 
